inicia documentacao com parametros como objeto e nao atributos
