# storage/api-docs/api-docs.json
@@ -85,60 +85,12 @@
                     }
                 ],
                 "requestBody": {
-                    "description": "Dados necessários para criar um convênio",
+                    "description": "Objeto Convênio a ser transportado",
                     "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
-                                "required": [
-                                    "nome",
-                                    "cnpj",
-                                    "telefone",
-                                    "email",
-                                    "id_endereco",
-                                    "data_criacao",
-                                    "data_atualizacao"
-                                ],
-                                "properties": {
-                                    "nome": {
-                                        "description": "Nome do convênio médico",
-                                        "type": "string",
-                                        "example": "Amil Saúde"
-                                    },
-                                    "cnpj": {
-                                        "description": "CNPJ do convênio médico",
-                                        "type": "string",
-                                        "example": "123456"
-                                    },
-                                    "telefone": {
-                                        "description": "Telefone do convênio médico",
-                                        "type": "string",
-                                        "example": "(11) 91234-5678"
-                                    },
-                                    "email": {
-                                        "description": "Email do convênio médico",
-                                        "type": "string",
-                                        "example": "contato@amil.com.br"
-                                    },
-                                    "id_endereco": {
-                                        "description": "ID do endereço do convênio médico",
-                                        "type": "string",
-                                        "example": "1"
-                                    },
-                                    "data_criacao": {
-                                        "description": "Data de criação do convênio médico",
-                                        "type": "string",
-                                        "format": "date-time",
-                                        "example": "2023-01-01T00:00:00Z"
-                                    },
-                                    "data_atualizacao": {
-                                        "description": "Data de atualização do convênio médico",
-                                        "type": "string",
-                                        "format": "date-time",
-                                        "example": "2023-01-01T00:00:00Z"
-                                    }
-                                },
-                                "type": "object"
+                                "$ref": "#/components/schemas/Convenio"
                             }
                         }
                     }
@@ -168,6 +120,17 @@
                         }
                     }
                 ],
+                "requestBody": {
+                    "description": "Objeto Convênio a ser transportado",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Convenio"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "200": {
                         "description": "Convênio excluído com sucesso."
@@ -230,7 +193,7 @@
                     "cnpj": {
                         "description": "CNPJ do convênio",
                         "type": "string",
-                        "example": "12345678000199"
+                        "example": "12.345.678/0001-99"
                     },
                     "telefone": {
                         "description": "Telefone de contato",
